--- a/in2it_site/package.json
+++ b/in2it_site/package.json
@@ -28,7 +28,8 @@
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2",
     "vue-badger-accordion": "^1.1.3",
-    "vuejs-datepicker": "^1.6.0"
+    "vuejs-datepicker": "^1.6.0",
+    "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^12.0.10",
